--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     implementation 'androidx.room:room-common:2.2.6'
     implementation 'androidx.room:room-runtime:2.2.6'
+    annotationProcessor "androidx.room:room-compiler:2.2.6"
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
